# github-stats

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
authentication/: urls.py  views.py
authentication/templates/auth/: login.html  register.html
authentication/templates/auth/layouts/: base.html
core/: apps.py  constant.py  models.py
core/templates/layouts/: base.html  footer.html  navbar.html  social_media_links.html
core/templates/layouts/navbar/: navbar.html
core/templates/partials/: safelist.html
core/templates/partials/form/: errors.html  field.html
core/templates/partials/navbar/: auth_element.html  logo.html
core/templates/utility/navbar/: auth_element.html  logo.html  nav_element.html  navbar.html
core/templatetags/: form_tag.py
github-stats/: manage.py
github-stats/authentication/: admin.py  apps.py
github-stats/github_stats/: asgi.py  settings.py  urls.py  wsgi.py
github_stats/: asgi.py  settings.py  urls.py  wsgi.py
readme/: admin.py  apps.py  urls.py  views.py
readme/forms/: column.py  readme_data.py
readme/migrations/: 0001_initial.py  0002_column_icon.py  0003_column_type.py  0004_alter_column_symbol.py  0005_readmedata.py  0006_rename_group_section_alter_section_table.py  0007_rename_column_component_alter_component_table.py
readme/models/: __init__.py  readme_column.py  readme_data.py
readme/templates/: index.html
readme/templates/layouts/: base.html
readme/templates/layouts/navbar/: navbar.html
readme/templates/partials/home/: build_type.html  signup_helper.html
readme/templates/readme/file/: create_file.html
readme/templates/readme/file_content/: create_readme.html
readme/templates/utility/home/: build_type.html
readme/views/: __init__.py  index.py  readme_column.py  readme_data.py
static/scripts/: base.js
static/styles/: base.css
theme/: apps.py
theme/static_src/: tailwind.config.js
theme/templates/: base.html
