[tool.poetry]
name = "github-stats"
version = "0.1.0"
description = "A Django-based API that provides various GitHub commit statistics, including weekly commit activity, contributor activity, weekly commit count, and hourly commit frequency. This project allows you to fetch GitHub repository data dynamically, offering reusable filtering functionality to customize your queries."
authors = ["Tariq Jamal A <tariqjamal4267324@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
django-environ = "^0.11.2"
django-unfold = "^0.43.0"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}
fontawesomefree = "^6.6.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.13.2"
docformatter = "^1.7.5"
djlint = "^1.36.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[tool.docformatter]
recursive = true
wrap-summaries = 99
wrap-descriptions = 99

[tool.djlint]
blank_line_after_tag="load,extends,include,block,endblock,render_form_field"
blank_line_before_tag="load,extends,include,block,endblock,render_form_field"
close_void_tags=true
exclude=".venv,venv,env"
format_attribute_template_tags=true
format_css=true
format_js=true
indent_size=4
max_line_length=120

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 99
good-names = ["id"]
disable = "import-error, too-few-public-methods"